@@ -8,6 +8,7 @@
     * Add Net::SSLeay::X509#get_pubkey method.
     * Add Net::SSLeay::X509#get_serialNumber method.
     * Add Net::SSLeay::GENERAL_NAME class.
+    * Add Net::SSLeay::X509#get_subjectAltNames method.
   [Incompatibe Changes]
     * Remove deprecated Net::SSLeay::X509#P_get_ocsp_uri method.
     * Net::SSLeay::XX509#get_issuer_name method returns a copied value.
